# live_ai_host

./: .gitignore  .vercelignore  dev  jupyter_test.ipynb  pyproject.toml  vercel.json
comfy_workflows/: flux_kontext_template.json  kontext_prompts.yaml  pulid_flux.json  pulid_flux_template.json  stage2_prompts.yaml
docs/: Phase0 checklist.md  Phase0 execution plan final.md  Phase0_checklist_ko.md  live_ai_host_prd.md  prd.md  runpod_phase0_plan.md  stage2_pulid_findings.md  stage4_oss_findings.md
docs/characters/: daramzzi.md
docs/phase_0_v1/: Phase0 checklist_ko.md
docs/phase_0_v2/: README.md  kontext_test_findings.md  kontext_test_plan.md  post_mortem_1.md  prototype_spec.md  realtime_interaction_plan.md
docs/phase_0_v2/deferred/: test_3_spec.md
docs/phase_0_v2/fsd/: analytics_dashboard.md  audit_log.md  bilingual_extension.md  broadcast_orchestrator.md  chat_ingest.md  compliance_pre_check.md  compliance_runbook.md  compositor_gstreamer.md  compositor_obs.md  coupang_platform.md  data_model.md  kakao_platform.md  llm_director.md  llm_host.md  llm_moderator.md  make_bg.md  make_broll.md  make_mascot.md  make_mascot_v2.md  make_voice.md  make_voice_v2.md  multi_tenancy.md  naver_platform.md  observability.md  (+12 more)
docs/report/: ai_host_test.html  ai_test.html  index.html
scripts/: comfyui.sh  download_weights.sh  fal_call.py
scripts/runpod/: README.md  bootstrap.sh  bootstrap_echomimic.sh  bootstrap_kontext.sh  bootstrap_sonic.sh  generate.py  generate_echomimic.py  generate_kontext.py  generate_sonic.py
scripts/test_3/: script_schema.json  setup_runpod.sh
(+112 files in other folders)
