[project]
name = "live-ai-host"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "fal-client>=1.0.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "numpy<2",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.8.0",
]
